--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,5 +4,8 @@
 - name: reload systemd
   command: systemctl daemon-reload
 
-- name: restart nats
-  service: name=nats state=restarted enabled=yes
+- name: restart nats-server
+  service: 
+    name: nats-server 
+    state: restarted
+    enabled: yes
