--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -13,3 +13,8 @@ nats_cli_version: 0.0.21
 nats_server_logfile: /var/log/nats-server.log
 nats_server_pidfile: /run/nats-server/nats-server.pid
 nats_server_config: /etc/nats-server.conf
+
+
+nats_server_port: 4222
+nats_server_monitor_port: 8222
+nats_server_cluster_port: 6222
