--- a/tasks/install_client.yml
+++ b/tasks/install_client.yml
@@ -1,26 +1,24 @@
 ---
 
-- name: "check if /usr/local/bin/nats exists"
-  stat:
+- name: "Check if /usr/local/bin/nats exists"
+  ansible.builtin.stat:
     path: "/usr/local/bin/nats"
   register: nats_cli
 
-- name: install nats cli
+- name: Install nats cli
+  when: not nats_cli.stat.exists
   block:
-    - name: unarchive nats cli
-      unarchive:
+    - name: Unarchive nats cli
+      ansible.builtin.unarchive:
         src: "https://github.com/nats-io/natscli/releases/download/{{ nats_cli_version }}/nats-{{ nats_cli_version }}-linux-amd64.zip"
         dest: /tmp
         copy: no
 
-    - name: move nats cli file
-      copy: 
+    - name: Move nats cli file
+      ansible.builtin.copy: 
         src: "/tmp/nats-{{ nats_cli_version }}-linux-amd64/nats" 
         dest: "/usr/local/bin/nats" 
+        mode: 0755
         remote_src: yes 
       
-    - name: make nats executable
-      file: 
-        path: "/usr/local/bin/nats"
-        mode: 0755
-  when: nats_cli.stat.exists == false
+    
