--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,20 +1,47 @@
 ---
 # defaults file for nats
+nats_mirror: https://github.com/nats-io
 
+nats_parent_install_dir: /opt/nats-io
+nats_arch_map:
+  386: 386
+  aarch64: arm64
+  arm64: arm64
+  x86_64: amd64
 
-nats_version: 2.1.9
-nats_folder: "/opt/nats-v{{ nats_version }}"
+nats_alt_app:
+
+# repo is the key
+nats_release_map:
+  natscli: 
+    name: nats
+    archive: zip
+    sep: '-'
+    mkdir: false
+  nats-server: 
+    name: nats-server
+    archive: zip
+    sep: '-'
+    mkdir: false
+  nats-top: 
+    name: nats-top
+    archive: tar.gz
+    sep: '_'
+    mkdir: true
+
+# nats_version: 2.1.9
+# nats_folder: "{{ nats_parent_install_dir }}/nats-v{{ nats_version }}"
 
 nats_user: nats
 nats_group: nats
 
-nats_cli_version: 0.0.21
+# nats_cli_version: 0.0.21
 
-nats_server_logfile: /var/log/nats-server.log
-nats_server_pidfile: /run/nats-server/nats-server.pid
-nats_server_config: /etc/nats-server.conf
+# nats_server_logfile: /var/log/nats-server.log
+# nats_server_pidfile: /run/nats-server/nats-server.pid
+# nats_server_config: /etc/nats-server.conf
 
 
-nats_server_port: 4222
-nats_server_monitor_port: 8222
-nats_server_cluster_port: 6222
+# nats_server_port: 4222
+# nats_server_monitor_port: 8222
+# nats_server_cluster_port: 6222
