--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,8 +1,8 @@
 galaxy_info:
-  author: your name
-  description: your role description
-  company: your company (optional)
-
+  author: Peter Magnusson
+  description: Install and configure NATS
+  role_name: nats
+  namespace: kmpm
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
   # issue_tracker_url: http://example.com/issue/tracker
@@ -14,9 +14,9 @@ galaxy_info:
   # - GPL-3.0-only
   # - Apache-2.0
   # - CC-BY-4.0
-  license: license (GPL-2.0-or-later, MIT, etc)
+  license: BSD-3-Clause
 
-  min_ansible_version: 2.9
+  min_ansible_version: "2.9"
 
   # If this a Container Enabled role, provide the minimum Ansible Container version.
   # min_ansible_container_version:
@@ -39,6 +39,11 @@ galaxy_info:
   #   - 7
   #   - 99.99
 
+  platforms:
+    - name: Debian
+      versions:
+      - bullseye
+
   galaxy_tags: []
     # List tags for your role here, one per line. A tag is a keyword that describes
     # and categorizes the role. Users find roles by searching for tags. Be sure to
@@ -50,4 +55,5 @@ galaxy_info:
 dependencies: []
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
-  
+
+allow_duplicates: true
