--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -67,6 +67,8 @@
         mode: 0644
 
     - name: Create {{ nats_install_dir }}
+      become: true
+      become_user: root
       when: nats_map.mkdir
       ansible.builtin.file: 
         path: "{{ nats_install_dir }}" 
